{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 29,
  "lineage": "3e045cad-7537-3d87-0e26-03a6a944815b",
  "resources": [
    {
      "module": "module.THAG",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01bf5380b19c395b5",
            "domain": "vpc",
            "id": "eipalloc-01bf5380b19c395b5",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-224-85-181.us-west-2.compute.amazonaws.com",
            "public_ip": "44.224.85.181",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e736d6727c05738",
            "domain": "vpc",
            "id": "eipalloc-09e736d6727c05738",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-187-176-119.us-west-2.compute.amazonaws.com",
            "public_ip": "54.187.176.119",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.THAG",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184042047773:internet-gateway/igw-00cf6d0aee3f69f91",
            "id": "igw-00cf6d0aee3f69f91",
            "owner_id": "184042047773",
            "vpc_id": "vpc-09494ae11c88e0bca"
          },
          "dependencies": [
            "module.THAG.aws_vpc.base"
          ]
        }
      ]
    },
    {
      "module": "module.THAG",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listner_https_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.THAG",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.THAG",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.THAG",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00cf6d0aee3f69f91",
            "id": "r-rtb-0318ac6ca5a7908971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0318ac6ca5a790897",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.THAG.aws_internet_gateway.igw",
            "module.THAG.aws_route_table.public",
            "module.THAG.aws_vpc.base"
          ]
        }
      ]
    },
    {
      "module": "module.THAG",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184042047773:route-table/rtb-0db77718a592d7e7d",
            "id": "rtb-0db77718a592d7e7d",
            "owner_id": "184042047773",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09494ae11c88e0bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.THAG.aws_vpc.base"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184042047773:route-table/rtb-05cc757a815c4cf5b",
            "id": "rtb-05cc757a815c4cf5b",
            "owner_id": "184042047773",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09494ae11c88e0bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.THAG.aws_vpc.base"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184042047773:route-table/rtb-0a9a2420e76e85a3f",
            "id": "rtb-0a9a2420e76e85a3f",
            "owner_id": "184042047773",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09494ae11c88e0bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.THAG.aws_vpc.base"
          ]
        }
      ]
    },
    {
      "module": "module.THAG",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184042047773:route-table/rtb-0318ac6ca5a790897",
            "id": "rtb-0318ac6ca5a790897",
            "owner_id": "184042047773",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09494ae11c88e0bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.THAG.aws_vpc.base"
          ]
        }
      ]
    },
    {
      "module": "module.THAG",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0883d54b87118ab27",
            "route_table_id": "rtb-0db77718a592d7e7d",
            "subnet_id": "subnet-0b6b1e6fd0b050e1a"
          },
          "dependencies": [
            "module.THAG.aws_route_table.private",
            "module.THAG.aws_subnet.private",
            "module.THAG.aws_vpc.base"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00aefb8d0ea5166e2",
            "route_table_id": "rtb-05cc757a815c4cf5b",
            "subnet_id": "subnet-06a200bdfeccbd62e"
          },
          "dependencies": [
            "module.THAG.aws_route_table.private",
            "module.THAG.aws_subnet.private",
            "module.THAG.aws_vpc.base"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0259b9ba01731aa91",
            "route_table_id": "rtb-0a9a2420e76e85a3f",
            "subnet_id": "subnet-005821a042cc4fda6"
          },
          "dependencies": [
            "module.THAG.aws_route_table.private",
            "module.THAG.aws_subnet.private",
            "module.THAG.aws_vpc.base"
          ]
        }
      ]
    },
    {
      "module": "module.THAG",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00149893046cddd52",
            "route_table_id": "rtb-0318ac6ca5a790897",
            "subnet_id": "subnet-0296f3e6fb6822506"
          },
          "dependencies": [
            "module.THAG.aws_route_table.public",
            "module.THAG.aws_subnet.public",
            "module.THAG.aws_vpc.base"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb9b33784884cba9",
            "route_table_id": "rtb-0318ac6ca5a790897",
            "subnet_id": "subnet-0e97a5e6bfff2423a"
          },
          "dependencies": [
            "module.THAG.aws_route_table.public",
            "module.THAG.aws_subnet.public",
            "module.THAG.aws_vpc.base"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032b3c797ad04e6aa",
            "route_table_id": "rtb-0318ac6ca5a790897",
            "subnet_id": "subnet-01af95bc7ddd80c96"
          },
          "dependencies": [
            "module.THAG.aws_route_table.public",
            "module.THAG.aws_subnet.public",
            "module.THAG.aws_vpc.base"
          ]
        }
      ]
    },
    {
      "module": "module.THAG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184042047773:security-group/sg-017d24007e42a363d",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017d24007e42a363d",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.32.0.0/22"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "172.32.0.0/22"
                ],
                "description": "from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb",
            "name_prefix": "",
            "owner_id": "184042047773",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09494ae11c88e0bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.THAG.aws_vpc.base"
          ]
        }
      ]
    },
    {
      "module": "module.THAG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184042047773:security-group/sg-07e67f13eda75ccab",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e67f13eda75ccab",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.32.0.0/22"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "184042047773",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09494ae11c88e0bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.THAG.aws_vpc.base"
          ]
        }
      ]
    },
    {
      "module": "module.THAG",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184042047773:subnet/subnet-0b6b1e6fd0b050e1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.32.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6b1e6fd0b050e1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "184042047773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09494ae11c88e0bca"
          },
          "dependencies": [
            "module.THAG.aws_vpc.base"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184042047773:subnet/subnet-06a200bdfeccbd62e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.32.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a200bdfeccbd62e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "184042047773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09494ae11c88e0bca"
          },
          "dependencies": [
            "module.THAG.aws_vpc.base"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184042047773:subnet/subnet-005821a042cc4fda6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.32.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005821a042cc4fda6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "184042047773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09494ae11c88e0bca"
          },
          "dependencies": [
            "module.THAG.aws_vpc.base"
          ]
        }
      ]
    },
    {
      "module": "module.THAG",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184042047773:subnet/subnet-0296f3e6fb6822506",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.32.3.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0296f3e6fb6822506",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "184042047773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09494ae11c88e0bca"
          },
          "dependencies": [
            "module.THAG.aws_vpc.base"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184042047773:subnet/subnet-0e97a5e6bfff2423a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.32.3.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e97a5e6bfff2423a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "184042047773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09494ae11c88e0bca"
          },
          "dependencies": [
            "module.THAG.aws_vpc.base"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184042047773:subnet/subnet-01af95bc7ddd80c96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.32.3.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01af95bc7ddd80c96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "184042047773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09494ae11c88e0bca"
          },
          "dependencies": [
            "module.THAG.aws_vpc.base"
          ]
        }
      ]
    },
    {
      "module": "module.THAG",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "base",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:184042047773:vpc/vpc-09494ae11c88e0bca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.32.0.0/22",
            "default_network_acl_id": "acl-0a75962e790519345",
            "default_route_table_id": "rtb-0481c8f2eda48b313",
            "default_security_group_id": "sg-06b71ae3648743f3b",
            "dhcp_options_id": "dopt-0dbc6299bf35ee70d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09494ae11c88e0bca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0481c8f2eda48b313",
            "owner_id": "184042047773"
          }
        }
      ]
    }
  ]
}